--- a/game.html
+++ b/game.html
@@ -12,11 +12,14 @@
             <img src="./assets/Logos/logohome.png" alt="logo">
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Game</a></li>
+            <li><a href="index.html"><h1>HOME</h1></a></li>
+            <li><a href="#"><h1 id="game">GAME</h1></a></li>
         </ul>
     </nav>
-    <h1>Welcome to the Hero Section</h1>
+    <div>
+        <h1 class="white">LET'S PLAY A</h1>
+        <h1 class="white">LITTLE GAME . . .</h1>
+    </div>
 </section>
 </body>
 </html>
