--- a/game.html
+++ b/game.html
@@ -21,5 +21,13 @@
         <h1 class="white">LITTLE GAME . . .</h1>
     </div>
 </section>
+
+<div id="divGame">
+    <img id="arrowDown" src="./assets/Logos/flèche_down_header.png" alt="">
+    <h1 class="white">CONNAISSEZ VOUS BIEN LE CHEVALIER NOIR ?</h1>
+    <img id="chevalierNoir" src="./assets/Game/Batgame_2.png" alt="">
+    <br>
+    <button id="demarrer">DÉMARRER LE QUIZ</button>
+</div>
 </body>
 </html>
