--- a/game.html
+++ b/game.html
@@ -29,5 +29,24 @@
     <br>
     <button id="demarrer">DÉMARRER LE QUIZ</button>
 </div>
+
+
+<footer class="footer">
+    <div class="flex-col flex">
+        <p class="white">
+            <img src="./assets/Logos/icon_WB.png" alt="warner-bros"/>
+            Ce projet respecte l’univers cinématographique des films Batman récents. Version Nolan &amp; Snyder &amp;
+            Reeves
+        </p>
+        <div class="social-icons flex">
+            <img class="logo-sayna" src="./assets/Logos/logo_sayna_white.png" alt="sayna"/>
+            <img class="x-white-3" src="./assets/Logos/icon_x.png" alt="X white 3"/>
+            <img class="vector" src="./assets/Logos/icon_DC.png" alt="Vector"/>
+            <img class="icons logo-fb" src="./assets/Logos/icon_facebook.png" alt="icons / facebook"/>
+            <img class="icons logo-ig" src="./assets/Logos/icon_ig.png" alt="icons / instagram"/>
+            <img class="logo-tw icons" src="./assets/Logos/icon_tw.png" alt="icons / twitter"/>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
