--- a/game.html
+++ b/game.html
@@ -24,7 +24,7 @@
 
 <div id="divGame">
     <img id="arrowDown" src="./assets/Logos/flèche_down_header.png" alt="">
-    <h1 class="white">CONNAISSEZ VOUS BIEN LE CHEVALIER NOIR ?</h1>
+    <h1 class="white" id="connaissez-vous">CONNAISSEZ VOUS BIEN LE CHEVALIER NOIR ?</h1>
     <img id="chevalierNoir" src="./assets/Game/Batgame_2.png" alt="">
     <br>
     <button id="demarrer">DÉMARRER LE QUIZ</button>
@@ -48,5 +48,6 @@
         </div>
     </div>
 </footer>
+<script src="game.js"></script>
 </body>
 </html>
